# tunnelbay

./: .gitignore  AGENTS.md  Cargo.toml  Justfile  README.md  release-plz.toml  renovate.json
.beads/: beads.base.jsonl  beads.base.meta.json  beads.left.meta.json
.github/: dependency-review-config.yml  settings.yml
.github/workflows/: ci.yml  dependencies.yml  release-images.yaml  release-plz.yml  security.yml
bay/: CHANGELOG.md  Cargo.toml
bay/src/: auth.rs  device_flow.rs  main.rs
buoy/: CHANGELOG.md  Cargo.toml
buoy/src/: main.rs
docker/bay/: Dockerfile
docker/buoy/: Dockerfile
docs/: authentik-setup.md  kubernetes-deployment.md
docs/infra/authentik/: README.md  tunnelbay-demo.tf
docs/k8s/clusters/kubernetes/bay/: deployment.yaml  ingressroute-control-http.yaml  ingressroute-control.yaml  ingressroute-wildcard.yaml  namespace.yaml  service.yaml
k8s/clusters/kubernetes/bay/: ingressroute-wildcard-http.yaml  kustomization.yaml
proto/: CHANGELOG.md  Cargo.toml
proto/src/: lib.rs
