[package]
name = "bay"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = "0.12.2"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
futures = "0.3.31"
http = "1.3.1"
hyper = { version = "1.8.1", features = ["http1", "server"] }
jsonwebtoken = "9.3.1"
proto = { path = "../proto" }
rand = "0.9.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
uuid = { version = "1.18.1", features = ["v4"] }
