[package]
name = "bay"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
clap = { version = "4.5.57", features = ["derive", "env"] }
futures = "0.3.31"
http = "1.4.0"
hyper = { version = "1.8.1", features = ["http1", "server"] }
jsonwebtoken = "10.0.0"
proto = { path = "../proto" }
rand = "0.9.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "form", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }
uuid = { version = "1.20.0", features = ["v4"] }
