[package]
name = "bay"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
base64 = "0.22.1"
clap = { version = "4.5.60", features = ["derive", "env"] }
futures = "0.3.32"
http = "1.4.0"
hyper = { version = "1.8.1", features = ["http1", "server"] }
jsonwebtoken = "10.3.0"
proto = { path = "../proto" }
rand = "0.9.2"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "form", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "signal", "sync"] }
uuid = { version = "1.20.0", features = ["v4"] }
