[package]
name = "buoy"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
clap = { version = "4.5.53", features = ["derive", "env"] }
futures = "0.3.31"
reqwest = { version = "0.12.25", default-features = false, features = ["json", "rustls-tls"] }
proto = { path = "../proto" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }

[dev-dependencies]
hyper014 = { package = "hyper", version = "0.14.32", features = ["full"] }
tempfile = "3.23.0"
