[package]
name = "buoy"
version = "0.10.0"
edition = "2021"

[dependencies]
anyhow = "1.0.101"
base64 = "0.22.1"
clap = { version = "4.5.57", features = ["derive", "env"] }
futures = "0.3.31"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
proto = { path = "../proto" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync", "net", "time"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["rustls-tls-webpki-roots", "connect"] }

[dev-dependencies]
hyper014 = { package = "hyper", version = "0.14.32", features = ["full"] }
tempfile = "3.24.0"
